--- a/css/style.css
+++ b/css/style.css
@@ -1489,7 +1489,7 @@ ul {
   .portfolioText {
     font-size: .85rem; } }
 
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 424px) {
   .navbar-menu {
     padding: .5rem; }
   .logoFooter img {
@@ -1532,4 +1532,25 @@ ul {
   .background-work1, .background-work2, .background-work2, .background-work2 {
     height: auto; }
   .portfolioText {
-    padding: 0 1rem; } }
+    padding: 0 1rem; }
+  .logo {
+    font-size: 1rem; }
+  .Contenido-Uno-Home p {
+    margin: 1rem 0rem; }
+  .Contenido-Dos-Home, .Contenido-Tres-Home, .Contenido-Tres-Home {
+    grid-template-rows: repeat(2, 202px); }
+  .FotoArticle1, .FotoArticle2, .FotoArticle2 {
+    grid-row: 1/3; }
+  .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox {
+    grid-row: 2/3;
+    align-self: end; }
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    padding: 0% 3%; }
+  .Contenido-Tres-Home h3 {
+    padding: 0% 12%; }
+  .ClientesContainer h2 {
+    font-size: 2rem; }
+  #logo-facebook {
+    margin: 0rem 1.5rem 0rem 2.5rem; }
+  #logo-insta, #logo-linkedin {
+    margin: 0; } }
